2013-06-20 Dario Rodriguez <dario@artica.es>

	* operation/inventories/inventory_incidents.php: Fixed a wrong
	link to incident view.
	* include/js/integria_incident_search.js: Removed a call to 
	configure_contact_buttons which is deprecated.

2013-06-20 Dario Rodriguez <dario@artica.es>

	*operation/inventories/inventory.php,
	operation/incidents/incident_notes.php,
	operation/incidents/incident_dashboard_detail.php,
	operation/incidents/incident_report.php,
	operation/incidents/incident.php: Recovered readMoreWU function 
	and moved to intetria_incident_search.js

2013-06-19 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: New ACLs implemented and moved to
	a new function called incidents_check_incident_acl.

2013-06-19 Dario Rodriguez <dario@artica.es>
	
	* godmode/setup/setup.php: Deleted flag to enable Incident reporters because
	this feature was removed.
	* include/js/integria_incident_search.js,
	operation/incidents/incident_detail.php,
	operation/incidents_simple/incidents.php: Deleted some code and functions related
	to Incident reporters feature that was removed.

2013-06-19  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  include/wiki/lionwiki_lib.php
	  include/wiki/plugins/wkp_AdminPages.php
	  operation/side_menu.php: Added ACLs to wiki.

2013-06-19 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: New function has_workunits,
	modified functions get_incidents and filter_incidents to fit
	new ACLs.
	* operation/incidents/incident_files.php,
	* operation/incidents/incident_detail.php,
	* operation/incidents/incident_dashboard_detail.php,
	* operation/side_menu.php: Fixed some problems with ACLs
	to fit the new ACL model for incidents.

2013-06-17 Dario Rodriguez <dario@artica.es>

	* include/integria_cron.php,
	include/functions_pop3.php: Email process feature moved
	to Enterprise version.

2013-06-17 Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Fixed a cross browser bug