@@ -1,5 +1,12 @@
 2013-06-20 Dario Rodriguez <dario@artica.es>
 
+	* operation/incidents/incident_detail.php,
+	operation/incidents_simple/incident_new.php,
+	include/js/integria_incident_search.js: Refactorized incident_limit
+	function to be user in normal and simple mode incident view.
+
+2013-06-20 Dario Rodriguez <dario@artica.es>
+
 	* operation/inventories/inventory_incidents.php: Fixed a wrong
 	link to incident view.
 	* include/js/integria_incident_search.js: Removed a call to 
